svc-navi.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: navidrome
  name: svc-navi
spec:
  type: ClusterIP
  ports:
    - port: 4533
      targetPort: 4533
      protocol: TCP
  selector:
    app: navidrome
