ing-navi.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: navidrome
  name: ing-navi
spec:
  ingressClassName: traefik
  rules:
   - host: navidrome
     http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: svc-navi
              port:
                number: 4533
